--- a/hosts.ini
+++ b/hosts.ini
@@ -1,11 +1,1 @@
-[on_prem]
-__HOMELAB_NODES__
-
-[gluster_server:children]
-on_prem
-
-[consul_server:children]
-on_prem
-
-[nomad_server:children]
-on_prem
+[nodes]
