--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -3,9 +3,7 @@
 name: ActionLint # name of the action (displayed in the github interface)
 
 on: # event list
-  push: # on a pull request to each of these branches
-    branches:
-      - '*'
+  push: # on a push to all branches except
     branches-ignore:
       - main
 
