--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -16,8 +16,14 @@ jobs: # list of things to do
       - name: Code Checkout
         uses: actions/checkout@v3
 
+      - name: Add go binaries to path
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.20
+          install-npm: false
+      
       - name: Install ActionLint
-        run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
+        run: go get -u github.com/rhysd/actionlint/cmd/actionlint
 
       - name: Run ActionLint
         run: actionlint
