--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -16,6 +16,17 @@ jobs: # list of things to do
       - name: Code Checkout
         uses: actions/checkout@v3
 
+      - name: Set up Go 1.20
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.20
+
+      - name: Debug
+        run: |
+          pwd
+          echo ${GOPATH}
+          echo ${GOROOT}
+
       - name: Install ActionLint
         run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
 
