--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -17,20 +17,4 @@ jobs: # list of things to do
         uses: actions/checkout@v3
 
       - name: Set up Go 1.20
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.20
-
-      - name: Debug
-        run: |
-          pwd
-          echo ${GOPATH}
-          echo ${GOROOT}
-
-      - name: Install ActionLint
-        run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
-
-      - name: Run ActionLint
-        run: |
-          export PATH="$GOPATH/bin:$PATH"
-          actionlint
+        run: docker run --rm -v $(pwd):/repo --workdir /repo rhysd/actionlint:latest -color
