--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -16,5 +16,5 @@ jobs: # list of things to do
       - name: Code Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Go 1.20
-        run: docker run --rm -v $(pwd):/repo --workdir /repo rhysd/actionlint:latest -color
+      - name: Run actionlint
+        run: 'docker run --rm -v $(pwd):/repo --workdir /repo rhysd/actionlint:latest -color'
