--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,5 +1,5 @@
-# .github/workflows/lint.yml
-
+# .github/workflows/linter.yml
+---
 name: Lint Code Base
 
 on:
@@ -29,6 +29,6 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter/slim@v5
         env:
-          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
