--- a/roles/consul/tasks/main.yml
+++ b/roles/consul/tasks/main.yml
@@ -8,7 +8,9 @@
 
 - name: Add HashiCorp repository
   ansible.builtin.apt_repository:
-    repo: deb [arch={{ dpkg_arch }}] https://apt.releases.hashicorp.com {{ ansible_distribution_release }} main
+    repo: |
+      deb [arch={{ dpkg_arch }}] https://apt.releases.hashicorp.com \
+      {{ ansible_distribution_release }} main
     state: present
 
 - name: Update apt cache
