--- a/roles/consul/tasks/main.yml
+++ b/roles/consul/tasks/main.yml
@@ -21,6 +21,7 @@
   ansible.builtin.apt:
     name: consul=1.14.4-1
     state: present
+  notify: restart-consul
 
 - name: Configure /etc/consul.d/consul.hcl
   ansible.builtin.template:
@@ -29,6 +30,7 @@
     owner: consul
     group: consul
     mode: '0644'
+  notify: restart-consul
 
 - name: Copy CA cert to /etc/consul.d/
   ansible.builtin.copy:
@@ -37,6 +39,7 @@
     owner: consul
     group: consul
     mode: '0644'
+  notify: restart-consul
 
 - name: Copy CA key to /etc/consul.d/
   ansible.builtin.copy:
@@ -45,6 +48,7 @@
     owner: consul
     group: consul
     mode: '0644'
+  notify: restart-consul
 
 - name: Generate node private key
   community.crypto.openssl_privatekey:
@@ -53,6 +57,7 @@
     type: ECC
     owner: consul
     group: consul
+  notify: restart-consul
 
 - name: Generate an OpenSSL Certificate Signing Request
   community.crypto.openssl_csr:
@@ -61,6 +66,7 @@
     common_name: "server.{{ consul_datacenter }}.{{ consul_domain }}"
     owner: consul
     group: consul
+  notify: restart-consul
 
 - name: Generate a Self Signed OpenSSL certificate
   community.crypto.x509_certificate:
@@ -72,10 +78,11 @@
     csr_path: /etc/consul.d/node-csr.pem
     owner: consul
     group: consul
+  notify: restart-consul
 
 - name: Enable and start consul
   ansible.builtin.systemd:
-    state: restarted
+    state: started
     enabled: true
     name: consul
 
@@ -83,7 +90,7 @@
   ansible.builtin.apt:
     name: bind9
     state: present
-  when: consul_role == 'server'
+  notify: restart-bind9
 
 - name: Copy bind defaults to /etc/default/named
   ansible.builtin.copy:
@@ -92,21 +99,21 @@
     owner: root
     group: root
     mode: '0644'
-  when: consul_role == 'server'
+  notify: restart-bind9
 
 - name: Get all default bind configs
   ansible.builtin.find:
     path: "/etc/bind/"
     excludes: 'named.conf'
   register: cleanup
-  when: consul_role == 'server'
+  notify: restart-bind9
 
 - name: Delete all default bind configs
   ansible.builtin.file:
     path: "{{ item.path }}"
     state: absent
   with_items: "{{ cleanup.files }}"
-  when: consul_role == 'server'
+  notify: restart-bind9
 
 - name: Configure /etc/bind/named.conf
   ansible.builtin.template:
@@ -115,11 +122,11 @@
     owner: root
     group: bind
     mode: '0644'
-  when: consul_role == 'server'
+  notify: restart-bind9
 
-- name: Restart bind9
+- name: Enable and start bind9
   ansible.builtin.systemd:
-    state: restarted
+    state: started
+    enabled: true
     daemon_reload: true
     name: bind9
-  when: consul_role == 'server'
