--- a/roles/nomad/tasks/main.yml
+++ b/roles/nomad/tasks/main.yml
@@ -22,7 +22,7 @@
   ansible.builtin.apt:
     name: nomad={{ nomad_version }}
     state: present
-  notify: restart
+  notify: Restart nomad
 
 - name: Configure /etc/nomad.d/nomad.hcl
   ansible.builtin.template:
@@ -31,7 +31,7 @@
     owner: nomad
     group: nomad
     mode: '0644'
-  notify: restart
+  notify: Restart nomad
 
 # make directory for cni plugins
 - name: Make directory for cni plugins
