Moved ansible work into server_setup

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,15 +24,16 @@ jobs: # list of things to do
       - name: Populate consul CA files from secrets
         run: |
           echo "${{ secrets.CONSUL_AGENT_CA }}" >\
-            roles/consul/files/consul-agent-ca.pem
+          server_setup/roles/consul/files/consul-agent-ca.pem
           echo "${{ secrets.CONSUL_AGENT_CA_KEY }}" >\
-            roles/consul/files/consul-agent-ca-key.pem
+          server_setup/roles/consul/files/consul-agent-ca-key.pem
 
       - name: Set consul_encrypt value in roles/consul/defaults/main.yml
         run: |
           echo "consul_encrypt: ${{ secrets.CONSUL_ENCRYPT }}" >>\
-            roles/consul/defaults/main.yml
+          server_setup/roles/consul/defaults/main.yml
 
       - name: Run ansible playbook
         run: |
           ansible-playbook -i hosts.ini deploy.yml
+        working-directory: server_setup
