--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs: # list of things to do
       - name: Populate hosts.ini from secrets
         run: |
           echo "[nodes]" > hosts.ini
-          echo "${{ secrets.HOMELAB_NODES }}" >> hosts.ini
+          echo "${{ secrets.HOMELAB_NODES }}" >> server_setup/ hosts.ini
 
       - name: Populate consul CA files from secrets
         run: |
