--- a/server_setup/roles/nomad/defaults/main.yml
+++ b/server_setup/roles/nomad/defaults/main.yml
@@ -6,7 +6,7 @@ nomad_data_dir: "/opt/consul"
 nomad_role: "server"
 nomad_version: "1.4.3-1"
 
-nfs_mount: "/mnt/nfs"
+nfs_mount: "/mnt/nfs/videos"
 
 cni_path: "/opt/cni/bin"
 cni_version: "1.2.0"
