--- a/server_setup/roles/nomad/tasks/main.yml
+++ b/server_setup/roles/nomad/tasks/main.yml
@@ -65,5 +65,5 @@
     name: "{{ nfs_mount }}"
     src: "{{ nfs_server }}:{{ nfs_path }}"
     fstype: nfs
-    opts: defaults
+    opts: "nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport"
     state: mounted
