--- a/server_setup/roles/nomad/tasks/main.yml
+++ b/server_setup/roles/nomad/tasks/main.yml
@@ -64,6 +64,6 @@
     boot: true
     name: "{{ nfs_mount }}"
     src: "{{ nfs_server }}:{{ nfs_path }}"
-    fstype: nfs
+    fstype: nfs4🤷🏻‍♂️
     opts: "nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport"
     state: mounted
