Tested options, added idmapd config

--- a/server_setup/roles/nomad/defaults/main.yml
+++ b/server_setup/roles/nomad/defaults/main.yml
@@ -12,3 +12,4 @@ cni_path: "/opt/cni/bin"
 cni_version: "1.2.0"
 arch: "{{ ansible_architecture }}"
 dpkg_arch: "{{ 'amd64' if arch == 'x86_64' else arch }}"
+nfs_idmap_conf: "home.jpopa.com"
