Read man page next time

--- a/server_setup/roles/nomad/tasks/main.yml
+++ b/server_setup/roles/nomad/tasks/main.yml
@@ -59,19 +59,13 @@
     enabled: true
     name: nomad
 
-- name: Set idmapd.conf value
-  ansible.builtin.copy:
+- name: Configure /etc/idmapd.conf
+  ansible.builtin.template:
+    src: templates/idmapd.conf.j2
     dest: /etc/idmapd.conf
     owner: root
     group: root
     mode: '0644'
-    content: "{{ nfs_idmap_conf }}"
-
-- name: Mount nfs volume {{ nfs_mount }}
-  ansible.posix.mount:
-    boot: true
-    name: "{{ nfs_mount }}"
-    src: "{{ nfs_server }}:{{ nfs_path }}"
-    fstype: nfs4
-    opts: "rsize=16384,wsize=16384,hard,timeo=600,retrans=2,noatime,rw"
-    state: mounted
+  notify:
+    - Clear nfsidmap
+    - Remount nfs
