--- a/server_setup/roles/nomad/handlers/main.yml
+++ b/server_setup/roles/nomad/handlers/main.yml
@@ -5,3 +5,17 @@
   ansible.builtin.systemd:
     name: nomad
     state: restarted
+
+- name: Clear nfsidmap
+  ansible.builtin.command:
+    cmd: "nfsidmap -c"
+  changed_when: false
+
+- name: Mount nfs volume {{ nfs_mount }}
+  ansible.posix.mount:
+    boot: true
+    name: "{{ nfs_mount }}"
+    src: "{{ nfs_server }}:{{ nfs_path }}"
+    fstype: nfs4
+    opts: "rsize=16384,wsize=16384,hard,timeo=600,retrans=2,noatime,rw"
+    state: remounted
