A bit slow today 🤷🏻‍♂️

--- a/server_setup/roles/nomad/handlers/main.yml
+++ b/server_setup/roles/nomad/handlers/main.yml
@@ -11,7 +11,7 @@
     cmd: "nfsidmap -c"
   changed_when: false
 
-- name: Mount nfs volume {{ nfs_mount }}
+- name: Remount nfs
   ansible.posix.mount:
     boot: true
     name: "{{ nfs_mount }}"
