--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,12 +38,9 @@ jobs: # list of things to do
           echo "${{ secrets.NFS_SETTINGS }}" >>\
           server_setup/roles/nomad/defaults/main.yml
 
-      - name: Append nomad defaults with DATADOG_URI from secrets
-        run: |
-          echo "datadog_uri: ${{ secrets.DATADOG_URI }}" >>\
-          server_setup/roles/nomad/defaults/main.yml
-
       - name: Run ansible playbook
         run: |
           ansible-playbook -i hosts.ini deploy.yml
         working-directory: server_setup
+        env:
+          DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY }}
