Add groups to agent

--- a/server_setup/deploy.yml
+++ b/server_setup/deploy.yml
@@ -24,6 +24,7 @@
     - datadog.datadog
   vars:
     datadog_api_key: "{{ lookup('env', 'DATADOG_API_KEY') }}"
+    datadog_additional_groups: docker, nomad, consul, bind, gluster
 
 - name: Set up all nodes
   hosts: all
