Updated workflows and added site

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs: # list of things to do
 
       - name: Preemptively install datadog.datadog role from Galaxy
         run: |
-          ansible-galaxy install datadog.datadog
+          ansible-galaxy install --force datadog.datadog
 
       - name: Run ansible playbook
         run: |
