--- a/.github/workflows/dry_run.yml
+++ b/.github/workflows/dry_run.yml
@@ -40,7 +40,7 @@
 
         - name: Preemptively install datadog.datadog role from Galaxy
           run: |
-            ansible-galaxy install datadog.datadog
+            ansible-galaxy install --force datadog.datadog
 
         - name: Run ansible playbook
           run: |
