Added conf for consul, and restart for ddagent

--- a/server_setup/roles/consul/handlers/main.yml
+++ b/server_setup/roles/consul/handlers/main.yml
@@ -9,3 +9,7 @@
   ansible.builtin.systemd:
     name: bind9
     state: restarted
+- name: Restart datadog-agent
+  ansible.builtin.systemd:
+    name: datadog-agent
+    state: restarted
